--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <div class="icontooinfo a0_Group_m" title="Для скачивания нужна программа TORRENT" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon filmitorrent"></div><a href="http://filmitorrent.xyz/" target="_blank">filmitorrent_TOP</a>
+                    <div class="icon filmitorrent"></div><a href="http://filmitorrent.net/" target="_blank">filmitorrent_TOP</a>
                     <div class="icontooinfo a0_Group_m" title="Для скачивания нужна программа TORRENT" alt=""></div>
                   </li>
                   <li>
