--- a/others.html
+++ b/others.html
@@ -188,7 +188,7 @@
                     <div class="icon utorrent com"></div><a href="http://newtorrent.org/" target="_blank">newtorrent.org</a>
                   </li>
                   <li>
-                    <div class="icon filmitorrent"></div><a href="http://filmitorrent.xyz/" target="_blank">filmitorrent</a><span class="opisi">ТОП фильмы</span>
+                    <div class="icon filmitorrent"></div><a href="http://filmitorrent.net/" target="_blank">filmitorrent</a><span class="opisi">ТОП фильмы</span>
                   </li>
                   <li>
                     <div class="icon pb wtf"></div><a href="https://pb.wtf/" target="_blank">pb.wtf</a><span class="opisi">фильмы</span>
