--- a/media.html
+++ b/media.html
@@ -77,16 +77,6 @@
                 <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.ЗАРУБЕЖНАЯ (playlist.2019.04)</span></div>
                 <ul>
                   <li>
-                    <div class="icon a0download"> </div><a>Скачать:</a><a href="https://turbo.to/pzqefb54uvmh.html" target="_blank">
-                      <div class="icontooinfo a-1_cifra" title="Скачать 1-ю часть" alt=""></div></a><a href="https://turbo.to/oy2jues1xkhj.html" target="_blank">
-                      <div class="icontooinfo a-2_cifra" title="Скачать 2-ю часть" alt=""></div></a><a href="https://turbo.to/orjbogd03t67.html" target="_blank">
-                      <div class="icontooinfo a-3_cifra" title="Скачать 3-ю часть" alt=""></div></a><a href="https://turbo.to/v116pgy2es6p.html" target="_blank">
-                      <div class="icontooinfo a-4_cifra" title="Скачать 4-ю часть" alt=""></div></a><a href="https://turbo.to/sw906losh8mx.html" target="_blank">
-                      <div class="icontooinfo a-5_cifra" title="Скачать 5-ю часть" alt=""></div></a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div><a href="https://youtu.be/A4TSFq5P4O8" target="_blank">
-                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как скачать" alt=""></div></a>
-                  </li>
-                  <li>
                     <!-- тут код плеера-->
                     <div id="player_zap" style="height:60px;width:240px">
                       <script>
@@ -142,13 +132,6 @@
                 <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.УКРАИНСКАЯ (playlist.2019.06)</span></div>
                 <ul>
                   <li>
-                    <div class="icon a0download"> </div><a>Скачать:</a><a href="https://turbo.to/15j9ntij07n3.html" target="_blank">
-                      <div class="icontooinfo a-1_cifra" title="Скачать 1-ю часть" alt=""></div></a><a href="https://turbo.to/fbygpo6o312s.html" target="_blank">
-                      <div class="icontooinfo a-2_cifra" title="Скачать 2-ю часть" alt=""></div></a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div><a href="https://youtu.be/A4TSFq5P4O8" target="_blank">
-                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как скачать" alt=""></div></a>
-                  </li>
-                  <li>
                     <!-- тут код плеера-->
                     <div id="player_ua" style="height:60px;width:240px">
                       <script>
@@ -158,7 +141,7 @@
                     </div>
                   </li>
                   <li>
-                    <div class="icon web telegram org"></div><a>Еще музыка:  </a><a href="https://t.me/music_hitok" target="_blank">_music_HitOK_</a><i class="fainfo fab fa-telegram"></i>
+                    <div class="icon web telegram org"></div><a>Еще музыка:  </a><a href="https://t.me/music_hitok_ua" target="_blank">_music_HitOK_UA</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                 </ul>
               </div>
@@ -211,13 +194,6 @@
                 <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.РУССКАЯ (playlist.2019.06)</span></div>
                 <ul>
                   <li>
-                    <div class="icon a0download"> </div><a>Скачать:</a><a href="https://turbo.to/me7zzjp6a66o.html" target="_blank">
-                      <div class="icontooinfo a-1_cifra" title="Скачать 1-ю часть" alt=""></div></a><a href="https://turbo.to/7a9lxi31ntep.html" target="_blank">
-                      <div class="icontooinfo a-2_cifra" title="Скачать 2-ю часть" alt=""></div></a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div><a href="https://youtu.be/A4TSFq5P4O8" target="_blank">
-                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как скачать" alt=""></div></a>
-                  </li>
-                  <li>
                     <!-- тут код плеера-->
                     <div id="player_ru" style="height:60px;width:240px">
                       <script>
@@ -227,7 +203,7 @@
                     </div>
                   </li>
                   <li>
-                    <div class="icon web telegram org"></div><a>Еще музыка:  </a><a href="https://t.me/music_hitok" target="_blank">_music_HitOK_</a><i class="fainfo fab fa-telegram"></i>
+                    <div class="icon web telegram org"></div><a>Еще музыка:  </a><a href="https://t.me/music_hitok_ru" target="_blank">_music_HitOK_RU</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                 </ul>
               </div>
