--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
                     <div class="icontooinfo a0repa3" title="Ваш Форум по комунальним розрахункам. Ціни, тарифи, рахунки куди оплачувати і т.п." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon forum zakladki"></div><a href="https://docs.google.com/document/d/1PAe-w_ffriHwYjxYcRd5ZM_JuBw_HEG-jXDwHA0tjpY/edit?usp=sharing" target="_blank">Розклад маршруток</a>
-                    <div class="icontooinfo a0repa3" title="Розклад маршрутних авто по городу Новомиргород" alt=""></div>
+                    <div class="icon forum zakladki"></div><a href="https://docs.google.com/document/d/1PAe-w_ffriHwYjxYcRd5ZM_JuBw_HEG-jXDwHA0tjpY/edit?usp=sharing" target="_blank">Розклад автомаршруів</a>
+                    <div class="icontooinfo a0repa3" title="Розклад автобусів та маршрутних авто по городу Новомиргород" alt=""></div>
                   </li>
                   <li>
                     <div class="icon google maps"></div><a href="https://www.google.com/maps/place/%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4,+%D0%9A%D1%96%D1%80%D0%BE%D0%B2%D0%BE%D0%B3%D1%80%D0%B0%D0%B4%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@48.7981251,31.5591162,12z/data=!3m1!4b1!4m5!3m4!1s0x40d1a5b80c2c8cdf:0x27e2a212ccc7175c!8m2!3d48.7907203!4d31.6582633" target="_blank">Карта Новомиргорода</a>
