--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <div class="icontooinfo a0repa3" title="Ваш Форум по комунальним розрахункам. Ціни, тарифи, рахунки куди оплачувати і т.п." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon forum zakladki"></div><a href="https://docs.google.com/document/d/1PAe-w_ffriHwYjxYcRd5ZM_JuBw_HEG-jXDwHA0tjpY/edit?usp=sharing" target="_blank">Розклад автомаршруів</a>
+                    <div class="icon forum zakladki"></div><a href="https://docs.google.com/document/d/1PAe-w_ffriHwYjxYcRd5ZM_JuBw_HEG-jXDwHA0tjpY/edit?usp=sharing" target="_blank">Розклад автомаршрутів</a>
                     <div class="icontooinfo a0repa3" title="Розклад автобусів та маршрутних авто по городу Новомиргород" alt=""></div>
                   </li>
                   <li>
