--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                 <ul>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Обновка.MP3.укр</a>
+                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Обновка.MP3.UA+ZAP</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки" alt=""></div>
                   </li>
                   <li>
