--- a/bank.html
+++ b/bank.html
@@ -179,7 +179,7 @@
                     <div class="icon alfabank ua"></div><a href="https://letyshops.com/r/alfa-bank-ukraina-4qh7st5ct0ys4s" target="_blank">alfabank.ua`</a>
                   </li>
                   <li>
-                    <div class="icon globalcredit ua"></div><a href="https://letyshops.com/r/global-credit-ua-4qh7st5ct0ys4s" target="_blank">globalcredit.ua`</a>
+                    <div class="icon globalcredit ua"></div><a href="https://globalcredit.ua/" target="_blank">globalcredit.ua</a>
                   </li>
                   <li>
                     <div class="icon ideabank ua"></div><a href="https://letyshops.com/r/idea-bank-ua-4qh7st5ct0ys4s" target="_blank">ideabank.ua`</a>
