--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                     <div class="icon bonprix ua"></div><a href="https://letyshops.com/r/bonprix-ua-4qh7st5csygwc8" target="_blank">bonprix.ua`</a>
                   </li>
                   <li>
-                    <div class="icon apteka24 ua"></div><a href="https://letyshops.com/r/apteka24-4qh7st5ct0cggg" target="_blank">apteka24.ua`</a>
+                    <div class="icon apteka24 ua"></div><a href="https://www.apteka24.ua/" target="_blank">apteka24.ua</a>
                   </li>
                 </ul>
               </div>
