--- a/shops.html
+++ b/shops.html
@@ -133,7 +133,7 @@
                     <div class="icon best aliexpress com"></div><a href="https://letyshops.com/r/aliexpress-4qh7st5csx0k4c" target="_blank">best.aliexpress.com`</a>
                   </li>
                   <li>
-                    <div class="icon ebay com"></div><a href="https://letyshops.com/r/ebay-4qh7st5csx6og0" target="_blank">ebay.com`</a>
+                    <div class="icon ebay com"></div><a href="https://www.ebay.com/" target="_blank">ebay.com</a>
                   </li>
                   <li>
                     <div class="icon russian alibaba com"></div><a href="https://letyshops.com/r/alibaba-4qh7st7rrfuo0g" target="_blank">russian.alibaba.com`</a>
@@ -162,7 +162,7 @@
                     <div class="icon stylus ua"></div><a href="https://letyshops.com/r/stylus-4qh7st5csxogcc" target="_blank">stylus.ua`</a>
                   </li>
                   <li>
-                    <div class="icon skidka ua"></div><a href="http://www.skidka.ua/" target="_blank">skidka.ua</a>
+                    <div class="icon skidka ua"></div><a href="https://letyshops.com/r/skidka-ua-4qh7st93i7408s" target="_blank">skidka.ua`</a>
                   </li>
                   <li>
                     <div class="icon foxtrot com ua"></div><a href="https://letyshops.com/r/fokstrot-ua-4qh7st5csxwko0" target="_blank">foxtrot.com.ua`</a>
@@ -207,7 +207,7 @@
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Все для печати. Предлагаем купить СБПЧ для печатающих устройств Epson, Canon, HP и Brother, перезаправляемые картриджи (ПЗК) и фотобумага. Продажа принтеров, МФУ, плоттеров с установленной системой НПЧ. Мы также производим ремонт печатающих устройств любых фирм." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon kivi ua"></div><a href="https://letyshops.com/r/kivi-ua-4qh7st7rvfggg0" target="_blank">kivi.ua`</a>
+                    <div class="icon kivi ua"></div><a href="https://kivi.ua/" target="_blank">kivi.ua</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Kivi (Ківі) - Smart телевізори та телебачення в Україні №1. Вибрати телевізор нового покоління KIVI. Купити Смарт тв з можливістю управління через смартфон. В телевізорах KIVI використовуються дисплеї топових конфігурацій від світових виробників. Подаруйте собі можливість насолоджуватись усіма кольорами і відтінками світу разом з KIVI" alt=""></div>
                   </li>
                 </ul>
@@ -276,7 +276,7 @@
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. MaxiModa - интернет-магазин модной женской одежды, обуви и аксессуаров из Украины (Киев, Мелитополь)" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon dressa com ua"></div><a href="https://letyshops.com/r/dressa-ua-4qh7st5x3aqswk" target="_blank">dressa.com.ua`</a>
+                    <div class="icon dressa com ua"></div><a href="https://dressa.com.ua/" target="_blank">dressa.com.ua</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Dressa - Стильная и модная женская одежда, обувь и аксессуары на любой сезон от производителя." alt=""></div>
                   </li>
                   <li>
@@ -336,7 +336,7 @@
                     <div class="icon yves-rocher ua"></div><a href="https://letyshops.com/r/yves-rocher-ua-4qh7st5csyyo0k" target="_blank">yves-rocher.ua`</a>
                   </li>
                   <li>
-                    <div class="icon bomond com ua"></div><a href="https://bomond.com.ua/" target="_blank">bomond.com.ua</a>
+                    <div class="icon bomond com ua"></div><a href="https://letyshops.com/r/bomond-4qh7st93i9ic8c" target="_blank">bomond.com.ua`</a>
                   </li>
                   <li>
                     <div class="icon watsons ua"></div><a href="https://letyshops.com/r/watsons-ua-4qh7st6a66ucwo" target="_blank">watsons.ua`</a>
@@ -349,7 +349,7 @@
                     <div class="icon edp ua"></div><a href="https://edp.ua" target="_blank">edp.ua</a>
                   </li>
                   <li>
-                    <div class="icon nyxcosmetic com ua"></div><a href="https://letyshops.com/r/nyx-professional-makeup-ua-4qh7st5cszacc4" target="_blank">nyxcosmetic.com.ua`</a>
+                    <div class="icon nyxcosmetic com ua"></div><a href="https://nyxcosmetic.com.ua/" target="_blank">nyxcosmetic.com.ua</a>
                   </li>
                   <li>
                     <div class="icon notino com"></div><a href="https://letyshops.com/r/notino-ua-4qh7st7ru2kg8o" target="_blank">notino.com`</a>
@@ -378,7 +378,7 @@
                     <div class="icon apteka911 com ua"></div><a href="https://apteka911.com.ua" target="_blank">apteka911.com.ua</a>
                   </li>
                   <li>
-                    <div class="icon apteka24 ua"></div><a href="https://letyshops.com/r/apteka24-4qh7st5ct0cggg" target="_blank">apteka24.ua`</a>
+                    <div class="icon apteka24 ua"></div><a href="https://www.apteka24.ua/" target="_blank">apteka24.ua</a>
                   </li>
                   <li>
                     <div class="icon doc ua"></div><a href="https://letyshops.com/r/doc-ua-4qh7st5ct0cggg" target="_blank">doc.ua`</a>
@@ -413,10 +413,10 @@
                 <div class="group-title"><span class="badge badge-success">Книги</span></div>
                 <ul>
                   <li>
-                    <div class="icon yakaboo ua"></div><a href="https://letyshops.com/r/yakaboo-4qh7st5cszy8k4" target="_blank">yakaboo.ua`</a>
+                    <div class="icon yakaboo ua"></div><a href="https://www.yakaboo.ua/" target="_blank">yakaboo.ua</a>
                   </li>
                   <li>
-                    <div class="icon grenka ua"></div><a href="https://grenka.ua" target="_blank">grenka.ua</a>
+                    <div class="icon grenka ua"></div><a href="https://letyshops.com/r/grenka-ua-4qh7st93iaskwg" target="_blank">grenka.ua`</a>
                   </li>
                   <li>
                     <div class="icon bambook com"></div><a href="https://letyshops.com/r/bambook-ua-4qh7st5ct06c4w" target="_blank">bambook.com`</a>
