--- a/bank.html
+++ b/bank.html
@@ -74,6 +74,15 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
+                <div class="group-title"><span class="badge badge-warning">ПОЛЕЗНОЕ</span></div>
+                <ul>
+                  <li>
+                    <div class="icon ubki ua"></div><a href="https://www.ubki.ua/ru/" target="_blank">ubki.ua</a><span class="opisi">Кредит ИНФО</span>
+                    <div class="icontooinfo a0repa3" title="Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине " alt=""></div>
+                  </li>
+                </ul>
+              </div>
+              <div class="group">
                 <div class="group-title"><span class="badge badge-success">Курс/Конвертер валют</span></div>
                 <ul>
                   <li>
