--- a/games.html
+++ b/games.html
@@ -138,7 +138,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Онлайн для детей</span></div>
+                <div class="group-title"><span class="badge badge-success">Онлайн</span></div>
                 <ul>
                   <li>
                     <div class="icon poki com"></div><a href="https://poki.com/ru" target="_blank">poki.com</a>
@@ -163,6 +163,10 @@
                   </li>
                   <li>
                     <div class="icon onlineguru ru"></div><a href="http://onlineguru.ru/" target="_blank">onlineguru.ru</a>
+                  </li>
+                  <li>
+                    <div class="icon silvergames"></div><a href="https://www.silvergames.com/ru/" target="_blank">silvergames.com</a>
+                    <div class="icontooinfo a0repa7" title="Играть В Классные Бесплатные Онлайн Игры На Silvergames.com" alt=""></div>
                   </li>
                 </ul>
               </div>
