--- a/market.html
+++ b/market.html
@@ -155,6 +155,10 @@
                   <li>
                     <div class="icon rst ua"></div><a href="http://rst.ua/" target="_blank">rst.ua</a>
                   </li>
+                  <li>
+                    <div class="icon avto pro"></div><a href="https://avto.pro/" target="_blank">avto.pro</a>
+                    <div class="icontooinfo a0repa7" title="Автозапчасти без посредников. АвтоПро - площадка для продажи и покупки запчастей для иномарок, новые и бу запчасти, выгодные цены на авторазборках." alt=""></div>
+                  </li>
                 </ul>
               </div>
             </div>
