--- a/index.html
+++ b/index.html
@@ -256,6 +256,10 @@
                 <div class="group-title"><a href="/bank.html"><span class="badge badge-dark">Банкинг</span></a></div>
                 <ul>
                   <li>
+                    <div class="icon ubki ua"></div><a href="https://www.ubki.ua/ru/" target="_blank">ubki.ua</a><span class="opisi">Кредит ИНФО</span>
+                    <div class="icontooinfo a0repa3" title="Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине " alt=""></div>
+                  </li>
+                  <li>
                     <div class="icon privat24 ua"></div><a href="https://www.privat24.ua/" target="_blank">privat24.ua</a><span class="opisi">Онлайн</span>
                   </li>
                   <li>
@@ -430,95 +434,57 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2019-09-19</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2020-02-03</span></a></div>
                 <ul>
                   <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon ubki ua"></div><a href="https://www.ubki.ua/ru/" target="_blank">ubki.ua</a><span class="opisi">Кредит ИНФО</span>
+                    <div class="icontooinfo a0repa3" title="Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине " alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="http://zakladki.at.ua/forum/24-9-1" target="_blank">Как платить за газ 2020</a>
+                    <div class="icontooinfo a0repa3" title="С января 2020 года украинцы начали получать платежки за газ, в которых теперь предусмотрена новая схема оплаты - отдельно за потребленный газ и абонплата за его транспортировку. " alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon silvergames"></div><a href="https://www.silvergames.com/ru/" target="_blank">silvergames.com</a>
+                    <div class="icontooinfo a0repa7" title="Играть В Классные Бесплатные Онлайн Игры На Silvergames.com" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon avto pro"></div><a href="https://avto.pro/" target="_blank">avto.pro</a>
+                    <div class="icontooinfo a0repa7" title="Автозапчасти без посредников. АвтоПро - площадка для продажи и покупки запчастей для иномарок, новые и бу запчасти, выгодные цены на авторазборках." alt=""></div>
+                  </li>
+                  <li>
                     <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Обновка.MP3.UA+ZAP</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://gas.ua/ua/gas/article/pobutovi-spozhivachi-mozhut-zekonomiti-do-25-na-oplati-za-gaz" target="_blank">ГАЗОВИЙ ЗАПАС</a>
-                    <div class="icontooinfo a0repa3" title="ГАЗОВИЙ ЗАПАС - ПЛАТІТЬ ЗА ГАЗ ДО 25% МЕНШЕ. Побутові споживачі можуть зекономити до 25% на оплаті за газ" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon notino com"></div><a href="https://letyshops.com/r/notino-ua-4qh7st7ru2kg8o" target="_blank">notino.com`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Iнтернет магазин парфумів: Парфуми в акції тижня ✓ Широкий вибір парфумерії та косметики ✓ Гарантія безпечної покупки – Пункт видачі в Києві." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon krauff com"></div><a href="https://letyshops.com/r/krauff-ua-4qh7st7rujcwss" target="_blank">krauff.com`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Krauff – немецкая элитная посуда. Самый полный каталог посуды Krauff. Бесплатная доставка. Гарантия качества." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon prego ua"></div><a href="https://letyshops.com/r/prego-ua-4qh7st7rum0www" target="_blank">prego.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon ager ua"></div><a href="https://letyshops.com/r/ager-ua-4qh7st7rur6s0o" target="_blank">ager.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет-магазин Ager - мужская и женская одежда оптом и в розницу. Низкие цены. Дропшиппинг. Совместные покупки. Акции и скидки каждый день." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon sneakerstudio com ua"></div><a href="https://letyshops.com/r/sneakerstudio-ua-4qh7st7rusqo0c" target="_blank">sneakerstudio.com.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Продажа кроссовок, обуви ✔ оригинальные бренды ✔ бесплатная доставка ✔цены ниже, чем у конкурентов" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon puccini ua"></div><a href="https://letyshops.com/r/puccini-ua-4qh7st7rv9ycgw" target="_blank">puccini.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Чемоданы, галантерея, кожаные сумки по выгодной цене прямо от производителя. Широкий ассортимент дорожных сумок, кошельков, перчаток и мужских ремней в интернет-магазин Puccini" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon honestgoods com ua"></div><a href="https://letyshops.com/r/honestgoods-ua-4qh7st7rvbeoos" target="_blank">honestgoods.com.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Подгузники, памперсы, детское питание, детские книги. Интернет магазин детских товаров в Украине. Купить подгузники и детское питание с доставкой - Honest Goods﻿" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon lekos com ua"></div><a href="https://letyshops.com/r/lekos-ua-4qh7st7rvd6o88" target="_blank">lekos.com.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Купить наручные часы в Украине в Интернет-магазине наручных часов LEKOS" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon originalam net"></div><a href="https://letyshops.com/r/originalam-4qh7st7rveecco" target="_blank">originalam.net`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Все для печати. Предлагаем купить СБПЧ для печатающих устройств Epson, Canon, HP и Brother, перезаправляемые картриджи (ПЗК) и фотобумага. Продажа принтеров, МФУ, плоттеров с установленной системой НПЧ. Мы также производим ремонт печатающих устройств любых фирм." alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon kivi ua"></div><a href="https://letyshops.com/r/kivi-ua-4qh7st7rvfggg0" target="_blank">kivi.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Kivi (Ківі) - Smart телевізори та телебачення в Україні №1. Вибрати телевізор нового покоління KIVI. Купити Смарт тв з можливістю управління через смартфон. В телевізорах KIVI використовуються дисплеї топових конфігурацій від світових виробників. Подаруйте собі можливість насолоджуватись усіма кольорами і відтінками світу разом з KIVI" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon cardo ua"></div><a href="https://letyshops.com/r/cardo-4qh7st7rrpuso8" target="_blank">cardo.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Официальный интернет-магазин брендовой одежды Cardo. ★ Фирменная одежда от бренда Cardo. ✈ Доставка по всей Украине." alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon citrus ua"></div><a href="https://letyshops.com/r/citrus-ua-4qh7st7rrmskgo" target="_blank">citrus.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет-магазин Цитрус — гаджеты и аксессуары" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon russian alibaba com"></div><a href="https://letyshops.com/r/alibaba-4qh7st7rrfuo0g" target="_blank">russian.alibaba.com`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Алибаба Alibaba, крупнейшая в мире онлайн B2B торговая платформа. Алибаба предлагает качественных производителей, поставщиков, экспортеров, импортеров, покупателей, оптовиков и товары." alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon exmo_com"></div><a href="https://exmo.com/?ref=1654818" target="_blank">exmo.com`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Банкинг. Надежная биткоин биржа и трейдинг платформа стран СНГ" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
                     <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://youtu.be/BdZQy6upWFc" target="_blank">Настройка ZAKLADOK</a>
                     <div class="icontooinfo a0repa3" title="Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon costaction com"></div><a href="http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5" target="_blank">Хранилище файлов`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Программы. Вы будете получать деньги за каждое скачивание Вашего файла. Просто загрузите файлы на Turbobit.net и Hitfile.net, обменивайтесь ими со своим друзьями, и незнакомцами через блоги, социальные сети, форумы или свои сайты!" alt=""></div>
                   </li>
