--- a/index.html
+++ b/index.html
@@ -133,9 +133,6 @@
                     <div class="icon unian net"></div><a href="https://www.unian.net/" target="_blank">Unian.net</a>
                   </li>
                   <li>
-                    <div class="icon sis at ua"></div><a href="http://sis.at.ua/" target="_blank">Нужные ШТУЧКИ!</a>
-                  </li>
-                  <li>
                     <div class="icon myscore com ua"></div><a href="https://www.myscore.com.ua/" target="_blank">myscore.com.ua</a>
                   </li>
                   <li>
@@ -259,10 +256,6 @@
                 <div class="group-title"><a href="/bank.html"><span class="badge badge-dark">Банкинг</span></a></div>
                 <ul>
                   <li>
-                    <div class="icon ubki ua"></div><a href="https://www.ubki.ua/ru/" target="_blank">ubki.ua</a><span class="opisi">Кредит ИНФО</span>
-                    <div class="icontooinfo a0repa3" title="Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине " alt=""></div>
-                  </li>
-                  <li>
                     <div class="icon privat24 ua"></div><a href="https://www.privat24.ua/" target="_blank">privat24.ua</a><span class="opisi">Онлайн</span>
                   </li>
                   <li>
@@ -279,9 +272,6 @@
                   </li>
                   <li>
                     <div class="icon minfin com ua"></div><a href="https://minfin.com.ua/currency/" target="_blank">minfin.com.ua</a><span class="opisi">Курс валют</span>
-                  </li>
-                  <li>
-                    <div class="icon kurs com ua"></div><a href="https://kurs.com.ua/" target="_blank">kurs</a><span class="opisi">Курс/конверт валют</span>
                   </li>
                   <li>
                     <div class="icon bestchange ru"></div><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a><span class="opisi">Обмен валют</span>
@@ -333,25 +323,32 @@
                     <div class="icon smarty sale"></div><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale`</a><span class="opisi">Умные покупки</span>
                   </li>
                   <li>
-                    <div class="icon rozetka com ua"></div><a href="https://letyshops.com/r/rozetka-4qh7st5csxa88w" target="_blank">rozetka.com.ua`</a>
+                    <div class="icon best aliexpress com"></div><a href="https://letyshops.com/r/aliexpress-4qh7st9dci04g0" target="_blank">best.aliexpress.com`</a>
                   </li>
                   <li>
-                    <div class="icon stylus ua"></div><a href="https://letyshops.com/r/stylus-4qh7st5csxogcc" target="_blank">stylus.ua`</a>
+                    <div class="icon rozetka com ua"></div><a href="https://letyshops.com/r/rozetka-4qh7st9dciskgw" target="_blank">rozetka.com.ua`</a>
                   </li>
                   <li>
-                    <div class="icon eldorado ua"></div><a href="https://letyshops.com/r/eldorado-ua-4qh7st5csxicso" target="_blank">eldorado.ua`</a>
+                    <div class="icon stylus ua"></div><a href="https://letyshops.com/r/stylus-4qh7st9dcjok8o" target="_blank">stylus.ua`</a>
                   </li>
                   <li>
-                    <div class="icon moyo ua"></div><a href="https://letyshops.com/r/moyo-ua-4qh7st5csxogcc" target="_blank">moyo.ua`</a>
+                    <div class="icon eldorado ua"></div><a href="https://letyshops.com/r/eldorado-ua-4qh7st9dcj28sk" target="_blank">eldorado.ua`</a>
                   </li>
                   <li>
-                    <div class="icon xiaomi ua"></div><a href="https://letyshops.com/r/xiaomi-ua-4qh7st5csy680o" target="_blank">xiaomi.ua`</a>
+                    <div class="icon moyo ua"></div><a href="https://letyshops.com/r/moyo-ua-4qh7st9dcjacc8" target="_blank">moyo.ua`</a>
                   </li>
                   <li>
-                    <div class="icon bonprix ua"></div><a href="https://letyshops.com/r/bonprix-ua-4qh7st5csygwc8" target="_blank">bonprix.ua`</a>
+                    <div class="icon xiaomi ua"></div><a href="https://letyshops.com/r/xiaomi-ua-4qh7st9dcpa80o" target="_blank">xiaomi.ua`</a>
                   </li>
                   <li>
-                    <div class="icon apteka24 ua"></div><a href="https://www.apteka24.ua/" target="_blank">apteka24.ua</a>
+                    <div class="icon bonprix ua"></div><a href="https://letyshops.com/r/bonprix-ua-4qh7st9ddo6cs0" target="_blank">bonprix.ua`</a>
+                  </li>
+                  <li>
+                    <div class="icon med-magazin ua"></div><a href="https://letyshops.com/r/med-magazin-ua-4qh7st9ddu2oog" target="_blank">med-magazin.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon apteka911 com ua"></div><a href="https://apteka911.com.ua" target="_blank">apteka911.com.ua</a>
                   </li>
                 </ul>
               </div>
@@ -460,23 +457,23 @@
                     <div class="icontooinfo a0repa3" title="Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon notino com"></div><a href="https://letyshops.com/r/notino-ua-4qh7st7ru2kg8o" target="_blank">notino.com`</a>
+                    <div class="icon notino com"></div><a href="https://letyshops.com/r/notino-ua-4qh7st9ddssg0c" target="_blank">notino.com`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Iнтернет магазин парфумів: Парфуми в акції тижня ✓ Широкий вибір парфумерії та косметики ✓ Гарантія безпечної покупки – Пункт видачі в Києві." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon krauff com"></div><a href="https://letyshops.com/r/krauff-ua-4qh7st7rujcwss" target="_blank">krauff.com`</a>
+                    <div class="icon krauff com"></div><a href="https://letyshops.com/r/krauff-ua-4qh7st9dcqask8" target="_blank">krauff.com`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Krauff – немецкая элитная посуда. Самый полный каталог посуды Krauff. Бесплатная доставка. Гарантия качества." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon prego ua"></div><a href="https://letyshops.com/r/prego-ua-4qh7st7rum0www" target="_blank">prego.ua`</a>
+                    <div class="icon prego ua"></div><a href="https://letyshops.com/r/prego-ua-4qh7st9ddpgkg4" target="_blank">prego.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon ager ua"></div><a href="https://letyshops.com/r/ager-ua-4qh7st7rur6s0o" target="_blank">ager.ua`</a>
+                    <div class="icon ager ua"></div><a href="https://letyshops.com/r/ager-ua-4qh7st9ddpq8ss" target="_blank">ager.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет-магазин Ager - мужская и женская одежда оптом и в розницу. Низкие цены. Дропшиппинг. Совместные покупки. Акции и скидки каждый день." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon sneakerstudio com ua"></div><a href="https://letyshops.com/r/sneakerstudio-ua-4qh7st7rusqo0c" target="_blank">sneakerstudio.com.ua`</a>
+                    <div class="icon sneakerstudio com ua"></div><a href="https://letyshops.com/r/sneakerstudio-ua-4qh7st9ddq0ww8" target="_blank">sneakerstudio.com.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Продажа кроссовок, обуви ✔ оригинальные бренды ✔ бесплатная доставка ✔цены ниже, чем у конкурентов" alt=""></div>
                   </li>
                   <li>
