--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 <div class="group-title"><a href="/city.html"><span class="badge badge-dark">Городок/Новомиргород</span></a></div>
                 <ul>       
                   <li>
-                    <div class="icon forum zakladki"></div><a href="http://zakladki.at.ua/forum/25-6-1#7" target="_blank">НАША КОМУНАЛКА</a>
+                    <div class="icon forum zakladki"></div><a href="https://drive.google.com/open?id=1vQHnYGF3VZda2UW38R4xG-pVTk3ggB1FuOoUTpKKCfk" target="_blank">НАША КОМУНАЛКА</a>
                     <div class="icontooinfo a0repa3" title="Ваш Форум по комунальним розрахункам. Ціни, тарифи, рахунки куди оплачувати і т.п." alt=""></div>
                   </li>
                   <li>
