--- a/shops.html
+++ b/shops.html
@@ -284,7 +284,7 @@
                     <div class="icon asos com"></div><a href="https://letyshops.com/r/asos-4qh7st9ddou800" target="_blank">asos.com`</a>
                   </li>
                   <li>
-                    <div class="icon maximoda com ua"></div><a href="https://letyshops.com/r/maximoda-ua-4qh7st9ddp2cks" target="_blank">maximoda.com.ua`</a>
+                    <div class="icon maximoda com ua"></div><a href="https://maximoda.com.ua/" target="_blank">maximoda.com.ua</a>
                     <div class="icontooinfo a0repa3" title="MaxiModa - интернет-магазин модной женской одежды, обуви и аксессуаров из Украины (Киев, Мелитополь)" alt=""></div>
                   </li>
                   <li>
@@ -337,7 +337,7 @@
                     <div class="icon bi ua"></div><a href="https://letyshops.com/r/budinok-igrashok-4qh7st9ddrc4sk" target="_blank">bi.ua`</a>
                   </li>
                   <li>
-                    <div class="icon berni com ua"></div><a href="https://letyshops.com/r/berni-4qh7st9ddrc4sg" target="_blank">berni.com.ua`</a>
+                    <div class="icon berni com ua"></div><a href="http://berni.com.ua/" target="_blank">berni.com.ua</a>
                   </li>
                   <li>
                     <div class="icon honestgoods com ua"></div><a href="https://letyshops.com/r/honestgoods-ua-4qh7st9ddrms44" target="_blank">honestgoods.com.ua`</a>
