--- a/index.html
+++ b/index.html
@@ -434,8 +434,16 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2020-02-03</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2020-03-05</span></a></div>
                 <ul>
+                  <li>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://drive.google.com/open?id=13fsDlhYni0Air3WBtxmb_nZBRzsOaBnU&amp;usp=sharing" target="_blank">Карта коронавируса UA</a>
+                    <div class="icontooinfo a0repa3" title="Карта Украины с позначками где были зафиксированные случаи" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://drive.google.com/open?id=13fsDlhYni0Air3WBtxmb_nZBRzsOaBnU&amp;usp=sharing" target="_blank">Карта коронавируса MIR</a>
+                    <div class="icontooinfo a0repa3" title="Вся статистика по коронавирусу, по всей земле" alt=""></div>
+                  </li>
                   <li>
                     <div class="icon ubki ua"></div><a href="https://www.ubki.ua/ru/" target="_blank">ubki.ua</a><span class="opisi">Кредит ИНФО</span>
                     <div class="icontooinfo a0repa3" title="Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине " alt=""></div>
