--- a/programs.html
+++ b/programs.html
@@ -221,6 +221,32 @@
                 </ul>
               </div>
               <div class="group">
+                <div class="group-title"><span class="badge badge-warning">Антивирусники</span></div>
+                <ul>
+                  <li>
+                    <div class="icon prog tnod32 info"></div><a href="https://drive.google.com/open?id=18kmNLxOR2ywf7gBrjvNXZDj9kyHJ_Pgr" target="_blank">NOD32 8.0.319.1 RePack</a>
+                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                    <div class="icontooinfo a0repa3" title="Антивирус для СЛАБЫХ ПК с оперативкой меньше 1Гб и одноядерным процом ESET NOD32 Antivirus _ Smart Security 8.0.319.1 RePack by KpoJIuK (21.12.2018)+++" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon"></div><a href="" target="_blank">Avast (онлайн установщик)</a>
+                    <div class="icontooinfo a0repa3" title="опись" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon"></div><a href="" target="_blank">назва</a>
+                    <div class="icontooinfo a0repa3" title="опись" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon"></div><a href="" target="_blank">назва</a>
+                    <div class="icontooinfo a0repa3" title="опись" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon"></div><a href="" target="_blank">назва</a>
+                    <div class="icontooinfo a0repa3" title="опись" alt=""></div>
+                  </li>
+                </ul>
+              </div>
+              <div class="group">
                 <div class="group-title"><span class="badge badge-warning">Для N.O.D.32 продление лицензии</span></div>
                 <ul>
                   <li>
@@ -265,7 +291,7 @@
             </div>
           </div>
           <div class="col-sm footer-col">
-            <div class="kolobok"><a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a><a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a><a href="https://telegram.me/zakladki_top" target="_blank" title="Telegram: https://t.me/zakladki_top"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a><a href="https://youtu.be/BdZQy6upWFc" target="_blank" title="Видеоинструкция: автозапуск ZAKLADOK"><i class="fas fa-medkit fa-lg coloriconfuter" aria-hidden="true"></i></a></div>
+            <div class="kolobok"><a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a><a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a><a href="https://t.me/joinchat/H_Y66VFScFxfUigt5lgS1Q" target="_blank" title="Telegram: ЧАТ в ТЕЛЕГРАМ"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a><a href="https://youtu.be/BdZQy6upWFc" target="_blank" title="Видеоинструкция: автозапуск ZAKLADOK"><i class="fas fa-medkit fa-lg coloriconfuter" aria-hidden="true"></i></a></div>
           </div>
           <div class="col-sm footer-col">
             <div class="kolobok">
