--- a/programs.html
+++ b/programs.html
@@ -224,25 +224,25 @@
                 <div class="group-title"><span class="badge badge-warning">Антивирусники</span></div>
                 <ul>
                   <li>
-                    <div class="icon prog tnod32 info"></div><a href="https://drive.google.com/open?id=18kmNLxOR2ywf7gBrjvNXZDj9kyHJ_Pgr" target="_blank">NOD32 8.0.319.1 RePack</a>
+                    <div class="icon prog tnod32 info"></div><a href="https://drive.google.com/open?id=18kmNLxOR2ywf7gBrjvNXZDj9kyHJ_Pgr" target="_blank">NOD32_8.0.319.1_RePack</a>
                     <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
                     <div class="icontooinfo a0repa3" title="Антивирус для СЛАБЫХ ПК с оперативкой меньше 1Гб и одноядерным процом ESET NOD32 Antivirus _ Smart Security 8.0.319.1 RePack by KpoJIuK (21.12.2018)+++" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon"></div><a href="" target="_blank">Avast (онлайн установщик)</a>
-                    <div class="icontooinfo a0repa3" title="опись" alt=""></div>
+                    <div class="icon prog_Avast"></div><a href="https://drive.google.com/open?id=16b8dyNNdl1K6sqlm-LrEQyljQQqGA2JK" target="_blank">Avast (онлайн установщик)</a>
+                    <div class="icontooinfo a0repa3" title="Антивирус" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon"></div><a href="" target="_blank">назва</a>
-                    <div class="icontooinfo a0repa3" title="опись" alt=""></div>
+                    <div class="icon prog_Avira"></div><a href="https://drive.google.com/open?id=19tidcXcvgfebelkOiYyzpuYgLdeBnBVD" target="_blank">Avira (онлайн установщик)</a>
+                    <div class="icontooinfo a0repa3" title="Антивирус" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon"></div><a href="" target="_blank">назва</a>
-                    <div class="icontooinfo a0repa3" title="опись" alt=""></div>
+                    <div class="icon prog_360TS"></div><a href="https://drive.google.com/open?id=1YPrQwzphC1AM4TQT5shTsT8sXjYlLImC" target="_blank">360TS (онлайн установщик)</a>
+                    <div class="icontooinfo a0repa3" title="Антивирус" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon"></div><a href="" target="_blank">назва</a>
-                    <div class="icontooinfo a0repa3" title="опись" alt=""></div>
+                    <div class="icon prog_DrWeb"></div><a href="https://drive.google.com/open?id=1HGiSm0B7IovrJi8s7RN_36MpL36U81W0" target="_blank">Dr.Web_CureIt</a>
+                    <div class="icontooinfo a0repa3" title="Одноразовая/портативная утилита для проверки ПК" alt=""></div>
                   </li>
                 </ul>
               </div>
