--- a/index.html
+++ b/index.html
@@ -437,11 +437,11 @@
                 <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2020-03-05</span></a></div>
                 <ul>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://drive.google.com/open?id=13fsDlhYni0Air3WBtxmb_nZBRzsOaBnU&amp;usp=sharing" target="_blank">Карта коронавируса UA</a>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0" target="_blank">Карта коронавируса UA</a>
                     <div class="icontooinfo a0repa3" title="Карта Украины с позначками где были зафиксированные случаи" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html?fbclid=IwAR0p969bUhyvZpETpmPgrAP_oFhlp1-p9PmWUFa9GDUSg6-8GcRFrbBVJOQ#/bda7594740fd40299423467b48e9ecf6" target="_blank">Карта коронавируса MIR</a>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://experience.arcgis.com/experience/685d0ace521648f8a5beeeee1b9125cd" target="_blank">Карта коронавируса MIR</a>
                     <div class="icontooinfo a0repa3" title="Вся статистика по коронавирусу, по всей земле" alt=""></div>
                   </li>
                   <li>
