--- a/shops.html
+++ b/shops.html
@@ -147,7 +147,7 @@
                 <div class="group-title"><span class="badge badge-success">Любые ТОВАРЫ!</span></div>
                 <ul>
                   <li>
-                    <div class="icon rozetka com ua"></div><a href="https://letyshops.com/r/rozetka-4qh7st9dciskgw" target="_blank">rozetka.com.ua`</a>
+                    <div class="icon rozetka com ua"></div><a href="https://rozetka.com.ua/" target="_blank">rozetka.com.ua</a>
                   </li>
                   <li>
                     <div class="icon allo ua"></div><a href="https://allo.ua" target="_blank">allo.ua</a>
@@ -296,7 +296,7 @@
                     <div class="icontooinfo a0repa3" title="Официальный интернет-магазин брендовой одежды Cardo. ★ Фирменная одежда от бренда Cardo. ✈ Доставка по всей Украине." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon prego ua"></div><a href="https://letyshops.com/r/prego-ua-4qh7st9ddpgkg4" target="_blank">prego.ua`</a>
+                    <div class="icon prego ua"></div><a href="https://prego.ua" target="_blank">prego.ua</a>
                     <div class="icontooinfo a0repa3" title="Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине" alt=""></div>
                   </li>
                   <li>
