--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                     <div class="icon best aliexpress com"></div><a href="https://letyshops.com/r/aliexpress-4qh7st9dci04g0" target="_blank">best.aliexpress.com`</a>
                   </li>
                   <li>
-                    <div class="icon rozetka com ua"></div><a href="https://letyshops.com/r/rozetka-4qh7st9dciskgw" target="_blank">rozetka.com.ua`</a>
+                    <div class="icon rozetka com ua"></div><a href="https://rozetka.com.ua/" target="_blank">rozetka.com.ua</a>
                   </li>
                   <li>
                     <div class="icon stylus ua"></div><a href="https://letyshops.com/r/stylus-4qh7st9dcjok8o" target="_blank">stylus.ua`</a>
@@ -528,7 +528,7 @@
             </div>
           </div>
           <div class="col-sm footer-col">
-            <div class="kolobok"><a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a><a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a><a href="https://t.me/joinchat/H_Y66VFScFxfUigt5lgS1Q" target="_blank" title="Telegram: ЧАТ в ТЕЛЕГРАМ"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a><a href="https://youtu.be/BdZQy6upWFc" target="_blank" title="Видеоинструкция: автозапуск ZAKLADOK"><i class="fas fa-medkit fa-lg coloriconfuter" aria-hidden="true"></i></a></div>
+            <div class="kolobok"><a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a><a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a><a href="https://t.me/zakladki_top" target="_blank" title="Telegram: ЧАТ в ТЕЛЕГРАМ"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a><a href="https://youtu.be/BdZQy6upWFc" target="_blank" title="Видеоинструкция: автозапуск ZAKLADOK"><i class="fas fa-medkit fa-lg coloriconfuter" aria-hidden="true"></i></a></div>
           </div>
           <div class="col-sm footer-col">
             <div class="kolobok">
