--- a/media.html
+++ b/media.html
@@ -74,7 +74,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.ЗАРУБЕЖНАЯ (playlist.2019.04)</span></div>
+                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.ЗАРУБЕЖНАЯ (playlist.2020.01)</span></div>
                 <ul>
                   <li>
                     <!-- тут код плеера-->
@@ -191,7 +191,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.РУССКАЯ (playlist.2019.06)</span></div>
+                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.РУССКАЯ (playlist.2020.01)</span></div>
                 <ul>
                   <li>
                     <!-- тут код плеера-->
@@ -297,7 +297,7 @@
             </div>
           </div>
           <div class="col-sm footer-col">
-            <div class="kolobok"><a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a><a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a><a href="https://t.me/joinchat/H_Y66VFScFxfUigt5lgS1Q" target="_blank" title="Telegram: ЧАТ в ТЕЛЕГРАМ"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a><a href="https://youtu.be/BdZQy6upWFc" target="_blank" title="Видеоинструкция: автозапуск ZAKLADOK"><i class="fas fa-medkit fa-lg coloriconfuter" aria-hidden="true"></i></a></div>
+            <div class="kolobok"><a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a><a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a><a href="https://t.me/zakladki_top" target="_blank" title="Telegram: ЧАТ в ТЕЛЕГРАМ"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a><a href="https://youtu.be/BdZQy6upWFc" target="_blank" title="Видеоинструкция: автозапуск ZAKLADOK"><i class="fas fa-medkit fa-lg coloriconfuter" aria-hidden="true"></i></a></div>
           </div>
           <div class="col-sm footer-col">
             <div class="kolobok">
