--- a/city.html
+++ b/city.html
@@ -150,12 +150,15 @@
                   </li>
                   <li>
                     <div class="icon school-1"></div><a href="http://novomyrgorod-internat.edukit.kr.ua/" target="_blank">Школа-інтернат І-ІІ ст. КОР</a>
+                    <div class="icontooinfo a0repa3" title="Новомиргородська спеціальна загальноосвітня школа-інтернат І-ІІ ступенів Кіровоградської обласної ради" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon school-1"></div><a href="http://novomyrgorod-specschool.edukit.kr.ua/" target="_blank">КЗ "Новомиргородська спеціальна школа КОР"</a>
+                    <div class="icon school-1"></div><a href="http://novomyrgorod-specschool.edukit.kr.ua/" target="_blank">КЗ "Новом-ка спец. школа КОР"</a>
+                    <div class="icontooinfo a0repa3" title="КОМУНАЛЬНИЙ ЗАКЛАД &quot;НОВОМИРГОРОДСЬКА СПЕЦІАЛЬНА ШКОЛА КІРОВОГРАДСЬКОЇ ОБЛАСНОЇ РАДИ&quot;" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon school-1"></div><a href="http://kapitanivka-proflyceum.edukit.kr.ua/" target="_blank">Капіт-кий проф.ліцей переробної пром.</a>
+                    <div class="icon school-1"></div><a href="http://kapitanivka-proflyceum.edukit.kr.ua/" target="_blank">Капіт-кий проф.ліцей</a>
+                    <div class="icontooinfo a0repa3" title="Капітанівський професійний ліцей переробної промисловості" alt=""></div>
                   </li>
                 </ul>
               </div>
