--- a/communal.html
+++ b/communal.html
@@ -111,10 +111,16 @@
                     <div class="icon prostobank ua"></div><a href="http://www.prostobank.ua/spravochniki/indikatory_rynka/electric_tariff" target="_blank">prostobank.ua</a><span class="opisi">цена.электр.</span>
                   </li>
                   <li>
-                    <div class="icon kresc com ua"></div><a href="http://www.kresc.com.ua/index.html" target="_blank">kresc.com.ua</a><span class="opisi">Киров.ОЕК</span>
+                    <div class="icon kresc com ua"></div><a href="https://www.kresc.com.ua/" target="_blank">kresc.com.ua</a><span class="opisi">КОЕК</span><a href="https://youtu.be/qIJYbNR_l6g" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
                   </li>
                   <li>
-                    <div class="icon kiroe com ua"></div><a href="http://kiroe.com.ua/" target="_blank">kiroe.com</a><span class="opisi">Кабин.обленерго.стар</span>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://koek.billing.city/login" target="_blank">Кабінет електро 2020</a>
+                    <div class="icontooinfo a0repa3" title="Огляд листівки від КОЕК" alt=""></div><a href="https://youtu.be/qIJYbNR_l6g" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
+                  </li>
+                  <li>
+                    <div class="icon kiroe com ua"></div><a href="http://kiroe.com.ua/" target="_blank">kiroe.com</a><span class="opisi">Кір-д.обленерго</span>
                   </li>
                 </ul>
               </div>
