--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
                     <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com</a><span class="opisi">оф.цена.электр.</span>
                   </li>
                   <li>
-                    <div class="icon kresc com ua"></div><a href="http://www.kresc.com.ua/payment.html" target="_blank">kresc.com.ua</a><span class="opisi">Електро.ОЕК</span>
+                    <div class="icon kresc com ua"></div><a href="https://www.kresc.com.ua/" target="_blank">kresc.com.ua</a><span class="opisi">КОЕК</span><a href="https://youtu.be/qIJYbNR_l6g" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
                   </li>
                   <li>
                     <div class="icon ukrtelecom ua"></div><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">Укртел.СЧЕТ</span><a href="https://youtu.be/WYhA_JFRVik" target="_blank">
@@ -318,9 +319,6 @@
                 <ul>
                   <li>
                     <div class="icon letyshops com"></div><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops`</a><span class="opisi">Все дешевле</span>
-                  </li>
-                  <li>
-                    <div class="icon smarty sale"></div><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale`</a><span class="opisi">Умные покупки</span>
                   </li>
                   <li>
                     <div class="icon best aliexpress com"></div><a href="https://letyshops.com/r/aliexpress-4qh7st9dci04g0" target="_blank">best.aliexpress.com`</a>
@@ -434,8 +432,13 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2020-03-05</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2020-05-30</span></a></div>
                 <ul>
+                  <li>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://koek.billing.city/login" target="_blank">Кабінет електро 2020</a>
+                    <div class="icontooinfo a0repa3" title="Огляд листівки від КОЕК" alt=""></div><a href="https://youtu.be/qIJYbNR_l6g" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
+                  </li>
                   <li>
                     <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://public.tableau.com/profile/publicviz#!/vizhome/monitor_15841091301660/sheet0" target="_blank">Карта коронавируса UA</a>
                     <div class="icontooinfo a0repa3" title="Карта Украины с позначками где были зафиксированные случаи" alt=""></div>
